--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+body {
+  background-color: #f0f0f0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.box {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  background-color: #fff;
+  width: 400px;
+  height: 600px;
+  margin: 60px auto auto;
+
+  border-radius: 20px;
 }
 
-.App-link {
-  color: #61dafb;
+.info {
+  flex: 30%;
+  border-bottom: 1px solid gray;
+  padding: 10px 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.date-box {
+  display: flex;
+  flex-direction: column;
+  margin: 30px 0;
+}
+
+.date {
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.day {
+  font-size: 16px;
+}
+
+.remainder {
+  font-size: 14px;
+}
+
+.todo-list {
+  flex: 70%;
+  padding: 20px 20px;
 }
